# obs-studio

./: .gitlab-ci.yml
UI/: obs-app.cpp  properties-view.cpp  sparkle-updater.mm  window-basic-main-outputs.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings.cpp
UI/data/themes/: DaCast.qss
UI/forms/: OBSBasic.ui  OBSBasicSettings.ui  obs.qrc
UI/installer/: mp-installer.nsi
cmake/Modules/: ObsCpack.cmake
cmake/osxbundle/: Info.plist  fixup_bundle.sh
libobs/: obs-display.c  obsconfig.h.in
plugins/: CMakeLists.txt
plugins/mac-syphon/: syphon.m
plugins/mac-vth264/: encoder.c
plugins/obs-ffmpeg/: obs-ffmpeg-nvenc.c
plugins/obs-qsv11/: obs-qsv11.c
plugins/obs-x264/: obs-x264.c
plugins/rtmp-dacast/: CMakeLists.txt  lookup-config.h.in  rtmp-dacast.c
plugins/rtmp-dacast/data/locale/: en-US.ini
plugins/rtmp-services/data/locale/: en-US.ini  fr-FR.ini
plugins/win-capture/: CMakeLists.txt  plugin-main.c
plugins/win-dshow/: win-dshow.cpp
plugins/win-mf/: mf-h264.cpp
